# lambda

./: .env  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: publish.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/npm/: bin.cjs  install.cjs  package.json  run.cjs
apps/cli/src/: cli.rs  main.rs
apps/landing/: package.json
apps/landing/src/: app.css
apps/landing/src/lib/webgl/: Lambdas.svelte  Triangle.svelte  Triangles.svelte  animation.ts  fragment.glsl  geometry.ts  helpers.ts  m4.ts  vertex.glsl  webgl.ts
apps/landing/src/routes/: +layout.svelte  +page.svelte
core/: Cargo.toml
core/src/: language.rs  lib.rs  manifest.rs
core/src/compiler/: cargo.rs  cargo_zigbuild.rs  go.rs  mod.rs
core/src/deploy/: config.rs  function.rs  mod.rs  role.rs  url.rs
core/src/install/: mod.rs  zig.rs
core/src/new/: config.rs  framework.rs  location.rs  mod.rs  template.rs
core/src/toolchain/: mod.rs  rustup.rs
core/src/utils/: log.rs  mod.rs  progress.rs
core/templates/rust/axum/src/: main.rs
hello/: Cargo.toml
lambda/: Cargo.toml
lambda/src/: main.rs
migrations/: 20250913160440_schema.sql
my-lambda/: Cargo.toml
my-lambda/src/: main.rs
npm/: bin.cjs  package.json
src/: auth.rs  cli.rs  compiler.rs  database.rs  db.rs  error.rs  framework.rs  install.rs  language.rs  location.rs  main.rs  manifest.rs  template.rs  toolchain.rs  user.rs  utils.rs  webhook.rs
src/commands/: build.rs  deploy.rs  init.rs  mod.rs  new.rs
src/compiler/: cargo.rs  cargo_zigbuild.rs  go.rs  mod.rs
src/deploy/: config.rs  function.rs  mod.rs  role.rs  url.rs
src/new/: framework.rs  location.rs  mod.rs  template.rs
templates/actix/: Cargo.toml
templates/actix/src/: main.rs
templates/axum/: Cargo.toml
templates/axum/src/: main.rs
templates/go/vanilla/: go.mod  main.go
templates/rocket/: Cargo.toml
templates/rust/actix/src/: main.rs
templates/rust/warp/src/: main.rs
templates/warp/: Cargo.toml
templates/warp/src/: main.rs
web/: .prettierignore  .prettierrc  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/src/: app.css
web/src/lib/: bindings.ts  utils.ts
web/src/lib/components/: Button.svelte  Header.svelte  Link.svelte  Separator.svelte
web/src/lib/components/avatar/: avatar-fallback.svelte  avatar-image.svelte  avatar.svelte  index.ts
web/src/lib/components/breadcrumb/: breadcrumb-item.svelte  breadcrumb-link.svelte  breadcrumb-list.svelte  breadcrumb-page.svelte  (+3 more)
web/src/routes/: +layout.svelte  +page.svelte  layout.css
web/src/routes/(app)/: +layout.ts
web/src/routes/(landing)/: +layout.svelte  +page.svelte
web/src/routes/404/: +page.svelte
(+55 files in other folders)
