[package]
name = "lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
bb8 = "0.9.1"
dotenvy = "0.15.7"
oauth2 = "5.0.0"
redis = { version = "1.0.3", features = ["bb8", "tokio-rustls-comp", "tls-rustls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = "0.3.46"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.20.0", features = ["v7"] }
