[package]
name = "lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
bb8 = "0.9.1"
dotenvy = "0.15.7"
oauth2 = "5.0.0"
redis = { version = "1.2.0", default-features = false, features = ["tokio-rustls-comp", "bb8"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
