[package]
name = "lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
bb8 = "0.9.1"
dotenvy = "0.15.7"
oauth2 = "5.0.0"
redis = { version = "1.2.4", default-features = false, features = ["tokio-rustls-comp", "bb8"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
time = "0.3.51"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
