[package]
name = "ld-core"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
aws-config = "1.8.3"
aws-sdk-iam = "1.84.0"
aws-sdk-lambda = "1.91.0"
cargo-zigbuild = { workspace = true }
clap = { workspace = true }
crossterm = "0.29.0"
indicatif = "0.18.0"
inquire = "0.7.5"
rust-embed = "8.7.2"
serde_json = "1.0.142"
tokio = { workspace = true }
toml = "0.9.4"
unicode-xid = "0.2.6"
uuid = { version = "1.18.0", features = ["v4"] }
which = "8.0.0"
zip = "4.3.0"
